--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,17 @@
 
   <ion-content>
 
-    <img src="assets/img/dreamhouse-logo.svg" class="menu-logo"/>
+    <img src="assets/img/umcu-logo.png" class="menu-logo"/>
+
+    <ion-list>
+      <ion-list-header>
+        Tralalala
+      </ion-list-header>
+      <button menuClose ion-item *ngFor="let menuItem of appMenuItems" (click)="openPage(menuItem)">
+        <ion-icon item-left [name]="menuItem.icon"></ion-icon>
+        {{menuItem.title}}
+      </button>
+    </ion-list>
 
     <ion-list>
       <ion-list-header>
