--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,8 +24,8 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #84BF41,
-  secondary:  #32db64,
+  primary:    #3062A5,
+  secondary:  #143670,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
