Formatted welcome page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,17 +6,7 @@
 
     <ion-list>
       <ion-list-header>
-        Tralalala
-      </ion-list-header>
-      <button menuClose ion-item *ngFor="let menuItem of appMenuItems" (click)="openPage(menuItem)">
-        <ion-icon item-left [name]="menuItem.icon"></ion-icon>
-        {{menuItem.title}}
-      </button>
-    </ion-list>
-
-    <ion-list>
-      <ion-list-header>
-        Shop
+        Testpagina's
       </ion-list-header>
       <button menuClose ion-item *ngFor="let menuItem of appMenuItems" (click)="openPage(menuItem)">
         <ion-icon item-left [name]="menuItem.icon"></ion-icon>
