--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,6 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 .menu-logo {
-  height: 80px;
-  margin: 12px 0 0 90px;
+  width: 152px;
+  margin: 12px 76px;
 }
