Add status page + edited welcome slider

--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -37,10 +37,10 @@ page-welcome {
       margin-top: -150px
     }
 
-    .next-icon {
-      position: relative;
-      top: 3px;
-    }
+    // .next-icon {
+    //   position: relative;
+    //   top: 3px;
+    // }
 
   }
 
