--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -27,7 +27,7 @@ $colors: (
   primary:    #3062A5,
   secondary:  #143670,
   danger:     #f53d3d,
-  light:      #f4f4f4,
+  light:      #fff,
   dark:       #222
 );
 
