--- a/src/pages/blank/blank.scss
+++ b/src/pages/blank/blank.scss
@@ -23,6 +23,70 @@
   width: 20px;
 }
 
+.blank-body-box {
+  position: relative;
+  width: 100%;
+  margin: 0px;
+  padding: 0px; 
+  border: 1px solid #000000;
+}
+
+.blank-bodyparts-brain {
+  position: absolute;
+  left: 41%;
+  top: 1.5%;
+  width: 18%
+}
+
+.blank-bodyparts-lungs {
+  position: absolute;
+  left: 33.5%;
+  top: 15%;
+  width: 33%;
+}
+
+.blank-bodyparts-heart {
+  position: absolute;
+  left: 43%;
+  top: 26%;
+  width: 13%
+}
+
+.blank-bodyparts-liver {
+  position: absolute;
+  left: 36%;
+  top: 34%;
+  width: 20%
+}
+
+.blank-bodyparts-pancreas {
+  position: absolute;
+  left: 48%;
+  top: 37%;
+  width: 16%
+}
+
+.blank-bodyparts-kidney_r {
+  position: absolute;
+  left: 35%;
+  top: 41%;
+  width: 8%
+}
+
+.blank-bodyparts-kidney_l {
+  position: absolute;
+  left: 57%;
+  top: 41%;
+  width: 8%
+}
+
+.blank-bodyparts-gastrointestinal {
+  position: absolute;
+  left: 37%;
+  top: 47%;
+  width: 24%
+}
+
 .md,
 .wp {
   .blank-info [text-right] {
