Restyled status page

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -26,6 +26,7 @@ $font-path: "../assets/fonts";
 $colors: (
   primary:    #3062A5,
   secondary:  #143670,
+  safe:       #12a82b,
   danger:     #f53d3d,
   light:      #fff,
   dark:       #222
