--- a/src/pages/status/status.scss
+++ b/src/pages/status/status.scss
@@ -13,6 +13,10 @@
   padding: 25px 0 20px 0;
 }
 
+// .card-team {
+//   margin-top: 100px;
+// }
+
 .status-info p {
   color: #697072;
   text-align: left;
