--- a/src/pages/organ/organ.scss
+++ b/src/pages/organ/organ.scss
@@ -6,10 +6,9 @@
   text-align: center;
 }
 
-.organ-header img {
+.organ-header-img {
   max-width: 200px;
   min-height: 115px;
-  margin-left: -15px;
   padding: 25px 0 20px 0;
 }
 
