--- a/src/pages/status/status.scss
+++ b/src/pages/status/status.scss
@@ -39,10 +39,21 @@ ion-col {
 .status-box-wrapper {
   max-height: 90vh;
   overflow: hidden;
+
+  h5 {
+    text-align: center;
+  }
+}
+
+.zoom:hover {
+  transform: scale(1.15);
+  cursor: pointer;
 }
 
 .status-body-box {
   position: relative;
+  left: 12%;
+  width: 76%;
   margin: 0px;
   padding: 0px; 
 }
