Status & organ page tweaks

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,3 +18,13 @@
   width: 122px;
   margin: 20px 91px;
 }
+
+ion-title {
+  text-align: center;
+  
+  img.logo {
+    height: 30px;
+    position: relative;
+    top: 2px;
+  }
+}
