--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,7 +29,7 @@ $colors: (
   safe:       #12a82b,
   danger:     #f53d3d,
   light:      #fff,
-  dark:       #222
+  dark:       #434954,
 );
 
 
