--- a/src/pages/detailpage/detailpage.scss
+++ b/src/pages/detailpage/detailpage.scss
@@ -1,4 +1,4 @@
-.detail-header {
+.blank-header {
   background-color: #434954;
   padding: 16px;
   width: 100%;
@@ -6,45 +6,99 @@
   text-align: center;
 }
 
-.detail-header img {
+.blank-header img {
   max-width: 200px;
   min-height: 115px;
   margin-left: -15px;
   padding: 25px 0 20px 0;
 }
 
-.detail-info p {
+.blank-info p {
   color: #697072;
   text-align: left;
 }
 
-.detail-info ion-icon {
+.blank-info ion-icon {
   color: color($colors, primary);
   width: 20px;
 }
 
+.blank-body-box {
+  position: relative;
+  width: 100%;
+  margin: 0px;
+  padding: 0px; 
+  border: 1px solid #000000;
+}
+
+.blank-bodyparts-brain {
+  position: absolute;
+  left: 41%;
+  top: 1.5%;
+  width: 18%
+}
+
+.blank-bodyparts-lungs {
+  position: absolute;
+  left: 33.5%;
+  top: 15%;
+  width: 33%;
+}
+
+.blank-bodyparts-heart {
+  position: absolute;
+  left: 43%;
+  top: 26%;
+  width: 13%
+}
+
+.blank-bodyparts-liver {
+  position: absolute;
+  left: 36%;
+  top: 34%;
+  width: 20%
+}
+
+.blank-bodyparts-pancreas {
+  position: absolute;
+  left: 48%;
+  top: 37%;
+  width: 16%
+}
+
+.blank-bodyparts-kidney_r {
+  position: absolute;
+  left: 35%;
+  top: 41%;
+  width: 8%
+}
+
+.blank-bodyparts-kidney_l {
+  position: absolute;
+  left: 57%;
+  top: 41%;
+  width: 8%
+}
+
+.blank-bodyparts-gastrointestinal {
+  position: absolute;
+  left: 37%;
+  top: 47%;
+  width: 24%
+}
+
 .md,
 .wp {
-  .detail-info [text-right] {
+  .blank-info [text-right] {
     margin-right: 0;
   }
 }
 
-.ios .detail-info {
+.ios .blank-info {
   text-align: center;
 }
 
-.ios .detail-info ion-icon {
+.ios .blank-info ion-icon {
   width: auto;
   margin-right: 10px;
 }
-
-.organimg {
-  width: 100%;
-  height: auto;
-  padding-left: 40%;
-  padding-right: 40%;
-}
-
-.firstcol { width: 25% }
-.secondcol { width: 75% }
