--- a/src/pages/status/status.scss
+++ b/src/pages/status/status.scss
@@ -71,7 +71,7 @@ ion-col {
   left: 15%;
   width: 70%;
   margin: 0px;
-  padding: 0px; 
+  padding-bottom: 12%; 
 }
 
 .status-bodyparts-brain {
@@ -125,8 +125,8 @@ ion-col {
 
 .status-bodyparts-gastrointestinal {
   position: absolute;
-  left: 37%;
-  top: 47%;
+  left: 38%;
+  top: 41%;
   width: 24%
 }
 
@@ -144,4 +144,42 @@ ion-col {
 .ios .status-info ion-icon {
   width: auto;
   margin-right: 10px;
+}
+
+.toptext{
+  text-align: center;
+  font-weight: bold;
+}
+
+.organimage{
+  text-align: center;
+  height: 70%;
+}
+
+.button:hover {
+  background-color: rgb(83, 83, 83);
+  color: white;
+}
+.button {
+  border-radius: 4px;
+  background-color: rgb(207, 207, 207);
+  border: none;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-size: 1em;
+  font-weight: bold;
+  padding: 20px;
+  width: 95%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
 }
