--- a/src/pages/organ/organ.scss
+++ b/src/pages/organ/organ.scss
@@ -1,8 +1,9 @@
 .organ-header {
   background-color: color($colors,dark);
-  padding: 16px;
+  // padding: 16px;
   width: 100%;
-  min-height: 120px;
+  padding-bottom: 15px;
+  // min-height: 120px;
 
  .organ-header-icon {
     text-align: center;
@@ -25,49 +26,75 @@
     }
 
     .timeline {
-      position: absolute;
-      right: 0;
-      display: inline-block;
-      padding: 0 30px;
-      
+      height: 88px;
       .day {
-        display: inline-block;
-        max-width: 90px;
         text-align: center;
 
         img {
-          display: inline-block;
+          padding-top: 10px;
+        }
+
+        div {
+          text-align: center;
+          position: absolute;
+          bottom: 0;
         }
       }
 
       .today {
+        font-size: 0.8em;
         font-weight: bold;
+        padding-top: 17px;
+        
         img{
-          height: 5rem;
+          height: 50px;
         }
       }
       
       .days1 {
+        padding-top: 17px;
         img{
-          height: 4rem;
+          height: 44px;
+          opacity: 0.6;
         }
       }
 
       .days2 {
+        font-size: 0.65em;
+        padding-top: 10px;
         img{
-          height: 2.8rem;
+          height: 32px;
+          opacity: 0.3;
         }
       }
     }
   }
 }
 
+.organ-treatments,
+.organ-advices {
+  ion-note{
+    color: color($colors, dark) !important;
+  }
+}
 .organ-card {
   background: #ddd;
 
   h2 {
     font-weight: bold;
   }
+}
+
+.danger {
+  color: color($colors, danger) !important;
+}
+
+.warning {
+  color: color($colors, warning) !important;
+}
+
+ion-card-content {
+  padding: 8px 15px !important;
 }
 
 .organ-questions {
