versie met grafieken achter long

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -15,7 +15,7 @@
 
 .about-info p {
   color: #697072;
-  text-align: left;
+  text-align: center;
 }
 
 .about-info ion-icon {
@@ -38,3 +38,10 @@
   width: auto;
   margin-right: 10px;
 }
+
+.line {
+  fill: none;
+  stroke: red;
+  stroke-width: 2px;
+}
+
