Revert "Detailed graphs on Feature detailpage"

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -15,7 +15,7 @@
 
 .about-info p {
   color: #697072;
-  text-align: center;
+  text-align: left;
 }
 
 .about-info ion-icon {
@@ -38,10 +38,3 @@
   width: auto;
   margin-right: 10px;
 }
-
-.line {
-  fill: none;
-  stroke: red;
-  stroke-width: 2px;
-}
-
