--- a/src/pages/organ/organ.scss
+++ b/src/pages/organ/organ.scss
@@ -1,9 +1,8 @@
 .organ-header {
   background-color: color($colors,dark);
-  // padding: 16px;
+  padding: 16px;
   width: 100%;
-  padding-bottom: 15px;
-  // min-height: 120px;
+  min-height: 120px;
 
  .organ-header-icon {
     text-align: center;
@@ -26,104 +25,49 @@
     }
 
     .timeline {
-      height: 88px;
+      position: absolute;
+      right: 0;
+      display: inline-block;
+      padding: 0 30px;
+      
       .day {
+        display: inline-block;
+        max-width: 90px;
         text-align: center;
 
         img {
-          padding-top: 10px;
-        }
-
-        div {
-          text-align: center;
-          position: absolute;
-          bottom: 0;
+          display: inline-block;
         }
       }
 
       .today {
-        font-size: 0.8em;
         font-weight: bold;
-        padding-top: 17px;
-        
         img{
-          height: 50px;
-          opacity: 0.8;
+          height: 5rem;
         }
       }
       
       .days1 {
-        padding-top: 17px;
         img{
-          height: 44px;
-          opacity: 0.6;
+          height: 4rem;
         }
       }
 
       .days2 {
-        font-size: 0.65em;
-        padding-top: 10px;
         img{
-          height: 32px;
-          opacity: 0.3;
+          height: 2.8rem;
         }
       }
     }
   }
 }
 
-.organ-treatments,
-.organ-advices {
-  ion-note{
-    color: color($colors, dark) !important;
-  }
-}
 .organ-card {
-  background: #ddd;  
+  background: #ddd;
+
   h2 {
     font-weight: bold;
   }
-  svg {
-    background-color: #fff !important; 
-  }
-  #test {
-    background-color: #fff !important;
-    margin: -5px -15px -10px -15px;
-    padding: 8px 15px !important;
-    }
-  #pressure {
-    background-color: #fff !important;
-    margin: -5px -15px -10px -15px;
-    padding: 8px 15px !important;
-  }
-  p {
-    font-weight: bold;
-    .orange {
-      color: orange;
-    }
-    .darkgreen {
-      color: darkgreen;
-    }
-    .steelblue {
-      color: steelblue;
-    }
-  }
-}
-
-
-
-
-.danger {
-  color: color($colors, danger) !important;
-}
-
-.warning {
-  color: color($colors, warning) !important;
-}
-
-ion-card-content {
-  padding: 8px 15px !important;
-
 }
 
 .organ-questions {
@@ -135,7 +79,7 @@ ion-card-content {
 }
 
 .organ-info p {
-  color: #726972;
+  color: #697072;
   text-align: left;
 }
 
@@ -167,10 +111,4 @@ ion-card-content {
 .ios .organ-info ion-icon {
   width: auto;
   margin-right: 10px;
-}
-
-.line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 2px;
 }
